# fastapi-app

./: main.py  open_webui.db  pyproject.toml
apps/utils/: auth.py  ldap_auth.py  security.py
apps/webui/internal/: db.py
apps/webui/models/: user.py
apps/webui/routes/: auth.py
